--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <form action="https://www.google.com/search">
         </div>
         <div class="form1" >
-              <input type="search" name="q" id="searchbox">
+              <input type="search" name="q" id="searchbox" autocomplete="off">
                   <input  type="submit" value="Google Search" >
       
       </form>
