--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
           <li>
             <a href="https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ">
-              <img src="./assets/pfp.png" />
+              <input class="btn" type="button" value="Sign in" onclick="document.location='https://accounts.google.com/ServiceLogin?hl=en&passive=true&continue=https://www.google.com/&ec=GAZAmgQ'" >
+            
             </a>
           </li>
         </ul>
